# codt

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yml
codt_py/: __init__.py  codt_py.pyi  tree.py
crates/codt/: Cargo.toml
crates/codt-cli/: Cargo.toml
crates/codt-cli/src/: file_reader.rs  main.rs  params.rs  value_parser.rs
crates/codt-py/: Cargo.toml
crates/codt-py/src/: lib.rs  tree.rs
crates/codt/src/: allocator.rs  lib.rs  test_support.rs
crates/codt/src/model/: data.rs  dataset.rs  dataview.rs  difference_table.rs  instance.rs  mod.rs  reduction.rs  tree.rs
crates/codt/src/search/: exhaustive.rs  graph.rs  mod.rs  node.rs  perfect_solver.rs  pruner.rs  queue.rs  solver.rs  solver_impl.rs
crates/codt/src/search/lower_bounds/: class_count.rs  improvement.rs  mod.rs  pair.rs
crates/codt/src/search/node/: mod.rs
crates/codt/src/search/solvers/: mod.rs  optimal_solver.rs  perfect_solver.rs
crates/codt/src/search/strategy/: andor.rs  bfs.rs  dfs.rs  dfsprio.rs  memory_adaptive.rs  mod.rs  random.rs
crates/codt/src/search/upper_bounds/: cart.rs
crates/codt/src/tasks/: accuracy.rs  classification.rs  mod.rs  regression.rs  squared_error.rs
crates/codt/tests/: cart.rs  data-reduction.rs  dataset-by-difficulty.rs  validate-against-witty.rs
data/: appendicitis.txt  australian.txt  auto.txt  backache.txt  biomed.txt  breast-cancer.txt  bupa.txt  cars.txt  cleve.txt  cleveland-nominal.txt  cleveland.txt  cloud.txt  colic.txt  contraceptive.txt  dermatology.txt  diabetes.txt  ecoli.txt  glass.txt  glass2.txt  haberman.txt  hayes-roth.txt  heart-c.txt  heart-h.txt  heart-statlog.txt  hepatitis.txt  hungarian.txt  lupus.txt  lymphography.txt  molecular_biology_promoters.txt  new-thyroid.txt  openml_binary_numerical_datasets.json  postoperative-patient-data.txt  schizo.txt  soybean.txt  spect.txt  tae.txt
data/openml/: appendicitis_test_edsa.txt  ar1.txt  ar4.txt  ar6.txt  autoprice.txt  blood-transfusion-service-center.txt  blood-transfusion-service-center_seed_1_nrows_2000_nclasses_10_ncols_100_stratify_true.txt  breast-w.txt  chatfield_4.txt  chscase_census3.txt  chscase_census5.txt  chscase_census6.txt  chscase_funds.txt  chscase_geyser1.txt  chscase_vine2.txt  climate-model-simulation-crashes.txt  costamadre1.txt  credit_approval_classification.txt  dataset_credit-approval.txt  dataset_credit-g.txt  datatrieve.txt  diabetes.txt  diggle_table_a1.txt  disclosure_x_noise.txt  disclosure_z.txt  divorce_prediction.txt  fertility.txt  german-credit-data-creditability-2.txt  german-credit-data-creditability.txt  glass.txt  hayes-roth.txt  heart-statlog-uci.txt  hutsof99_child_witness.txt  ilpd-numeric.txt  ionosphere.txt  iris.txt  jedit_4_2_4_3.txt  kc1-binary.txt  kc1-top5.txt  kc2.txt  (+24 more)
data/sampled/: appendicitis_0.2_0.txt  appendicitis_0.2_1.txt  appendicitis_0.2_2.txt  appendicitis_0.2_3.txt  appendicitis_0.2_4.txt  appendicitis_0.2_5.txt  appendicitis_0.2_6.txt  appendicitis_0.2_7.txt  appendicitis_0.2_8.txt  appendicitis_0.2_9.txt  appendicitis_0.5_0.txt  appendicitis_0.5_1.txt  appendicitis_0.5_2.txt  appendicitis_0.5_3.txt  appendicitis_0.5_4.txt  appendicitis_0.5_5.txt  appendicitis_0.5_6.txt  appendicitis_0.5_7.txt  appendicitis_0.5_8.txt  appendicitis_0.5_9.txt  australian_0.2_0.txt  (+679 more)
examples/: simple.py
experiments/: anytime-performance.py  cart.py  cart_sklearn_zero_misclass.py  compare_two_solvers.md  compare_two_solvers.py  evaluate_bounds.py  evaluate_cache.py  plot_edfc.py  plot_style.py  run_codt_sampled.py  run_codt_witty_sampled.py  sampled_difficulty_order.txt
results/: witty-output-format.md  witty-results
scripts/: fetch_datasets.py  summarize_sampled_datasets.py  summarize_witty_codt_sampled.py
(+943 files in other folders)
