[workspace]
members = ["crates/*"]
default-members = ["crates/codt-cli"]
resolver = "2"

[workspace.package]
edition = "2021"

[profile.profiling]
inherits = "release"
debug = true

[workspace.dependencies]
codt = { path = "crates/codt" }
codt-cli = { path = "crates/codt-cli" }
codt-py = { path = "crates/codt-py" }

clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.22"
pyo3 = "0.23.3"
