[workspace]
members = ["crates/*"]
default-members = ["crates/codt-cli"]
resolver = "3"

[workspace.package]
repository = "https://github.com/mimvdb/codt"
edition = "2024"
authors = ["Mim van den Bos"]
license = "MIT"

[profile.release]
lto = true

[profile.profiling]
inherits = "release"
debug = true

[workspace.dependencies]
codt = { path = "crates/codt" }
codt-cli = { path = "crates/codt-cli" }
codt-py = { path = "crates/codt-py" }

clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.22"
pyo3 = "0.24.1"
numpy = "0.24.0"
rustc-hash = "2.1.1"
ckmeans = { git = "https://github.com/mimvdb/ckmeans", rev = "ce54c86" }
strum = "0.27.1"
strum_macros = "0.27.1"
