[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "codt"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "crates/codt-py/Cargo.toml"

[tool.uv]
# Rebuild package when any rust files change (https://github.com/PyO3/maturin/issues/2314)
cache-keys = [{file = "pyproject.toml"}, {file = "**/Cargo.toml"}, {file = "**/*.rs"}]
