[package]
name = "codt-cli"
version = "0.1.0"
description = "CLI interface for codt (Continuous Optimal Decision Trees)."
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
codt = { workspace = true }