[package]
name = "codt-py"
version = "0.1.0"
description = "Python bindings for codt (Continuous Optimal Decision Trees)."
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
name = "codt_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true }
numpy = { workspace = true }
codt = { workspace = true }
